--- a/projets/TP_STM32/release/TP_GPIO.build_log.htm
+++ b/projets/TP_STM32/release/TP_GPIO.build_log.htm
@@ -13,11 +13,13 @@ compiling pilote_IO.c...
 compiling clock.c...
 compiling test_timer.c...
 compiling timer1234.c...
+../../pilotes/timer/timer1234.c: In function 'Set_PWM_cycle':
+../../pilotes/timer/timer1234.c(106): warning: 'return' with a value, in function returning void
 compiling pilote_ADC.c...
 compiling CodInc.c...
 assembling startup-gcc.S...
 linking...
-After Build - User command #1: "C:\Program Files (x86)\CodeSourcery\Sourcery G++ Lite\bin\arm-none-eabi-size.exe" release\*.elf
---- Error: User Command terminated, Exit-Code = 1
-".\release\TP_GPIO.elf" - 1 Error(s), 0 Warning(s).
-Target not created
+After Build - User command #1: "C:\Program Files (x86)\CodeSourcery\Sourcery_CodeBench_Lite_for_ARM_EABI\bin\arm-none-eabi-size.exe"  release\*.elf
+   text    data     bss     dec     hex filename
+   4788       0      12    4800    12c0 release\TP_GPIO.elf
+".\release\TP_GPIO.elf" - 0 Error(s), 1 Warning(s).
